# zibi

./: .gitignore  .message-state.json  CYCLING-MESSAGES-TEST.md  CYCLING-SYSTEM-GUIDE.md  FINAL-TEST.ps1  INSTALLATION-GUIDE.md  INTEGRATION-COMPLETE.md  LICENSE  QUICK-REFERENCE.txt  QUICK-SETUP.md  README-MESSAGES.md  README.md  SETUP-COMPLETE.md  SHELL-INTEGRATION-GUIDE.md  SPY-MODE-GUIDE.md  SYSTEM-SUMMARY.txt  SYSTEM-WIDE-INSTALLATION.md  TESTING_WITHOUT_INSTALL.md  demo-cycling.ps1  error.txt  final-verification.ps1  help.txt  help_output.txt  pyproject.toml  quick_test.py  show-result.ps1  success.txt  test-cycling-live.ps1  test-cycling.ps1  test-live.sh  test-messages.ps1  test-paths.py  test-spy-autosave.sh  verify-final.ps1  verify-system.ps1  zibi-command.ps1
zibi/: __init__.py  __main__.py  config.py  db.py  hooks.py  main.py  message_manager.py  utils.py
zibi/.zibi-messages/: .message-state.json  error.txt  success.txt  zibi-messages.ps1
