[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zibi"
version = "1.0.0"
description = "A fast, opinionated terminal clipboard manager for developers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "zibi" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "pyperclip>=1.8.2",
  "qrcode>=7.4.0",
  "requests>=2.31.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
zibi = "zibi.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
zibi = [".zibi-messages/*"]
